data/derived/sp14/progs/unify/prog3958.ml.out
Characters 126-127:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'a list -> 'a list
       but an expression was expected of type 'a -> 'a list -> 'a
       The type variable 'a occurs inside 'a list
